Fix unreadable title links
There must have been a recent change to hackernews's html, as the title
links are now black which is not readable against the dark background.

This slight css change makes them their previous readable blueish color.

--- a/inject/inject.css
+++ b/inject/inject.css
@@ -19,7 +19,7 @@ b {
   color: #fafafa;
 }
 
-td>.title {
+td.title {
   color: #fafafa;
 }
 
@@ -53,7 +53,7 @@ td>a:link {
   color: #8c96ac;
 }
 
-.title>a:link {
+.titleline>a:link {
   color: #8c96ac;
 }
 
@@ -65,7 +65,7 @@ a>u {
   color: #8c96ac;
 }
 
-.title>a:visited {
+.titleline>a:visited {
   color: #979cf4;
 }
 
